# nomba

./: .gitignore  CHANGELOG.md  README.md  publish.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: generate_resources.py
src/nomba/: __init__.py  client.py  exceptions.py  http.py  models.py  webhooks.py
src/nomba/data/: nomba_openapi.json
src/nomba/flows/: __init__.py
src/nomba/resources/: __init__.py  accounts.py  airtime_data.py  betting.py  cabletv.py  charge.py  checkout.py  direct_debits.py  electricity.py  global_collections.py  global_payout.py  terminals.py  transactions.py  transfers.py  virtual_accounts.py
src/nomba_python/: __init__.py  concurrency.py  pagination.py  validation.py
src/nomba_python/flows/: card_payment.py
src/nomba_python/resources/: transactions.py
