[project]
name = "nomba"
version = "0.1.0"
description = "Unofficial Python SDK for the Nomba payments API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Righteousness" },
]
keywords = ["nomba", "payments", "nigeria", "fintech", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/RightFix/nomba"
Documentation = "https://rightfix.github.io/nomba-docs/"
Repository = "https://github.com/RightFix/nomba"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
